<resources>
    <string name="app_name">FoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="my_retaurant_app">My Retaurant App</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="food123_gmail_com">food123@gmail.com</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="make_order">Make Order</string>
    <string name="maps">Maps</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAK8E8knsGp9XM0BZtGkv_XAeeqs1P4mBE</string>
    <string name="chat">Chat</string>
</resources>