<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.code.foodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.code.foodapp.ui.dailymeal.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/fragment_daily_meal" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.code.foodapp.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.code.foodapp.ui.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.code.foodapp.ui.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.code.foodapp.ui.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

</navigation>